--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,82 +1,145 @@
- <link rel="stylesheet" href="http://localhost:8080/sigmr/css/bootstrap-3.3.2-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/js/jquery-ui-1.12.1/jquery-ui.css">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/hightcharts/highcharts.css">
-	
-	
-	 
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/ui.jqgrid.css">
-	<link rel="stylesheet" id="sigmr-theme-style" href="http://localhost:8080/sigmr/css/app/main-sig.css?v=0.0.0-snapshot">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/bootstrap-fileinput/fileinput.min.css">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/bootstrap-select.min.css">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/js/bootstrap-datetimepicker/daterangepicker.css"> 
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/huebee.css">
-	
-	
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/fancytree/skin-bootstrap/ui.fancytree.css"> 
-		
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/css/jquery-plugins/contextmenu/jquery.contextMenu.min.css">
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/bootstrap-3.3.2-dist/css/bootstrap.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/font-awesome-4.7.0/css/font-awesome.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/js/jquery-ui-1.12.1/jquery-ui.css"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/hightcharts/highcharts.css"
+/>
 
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/js/devextreme/Lib/css/dx.common.css" type="text/css">
-	<link rel="stylesheet" href="http://localhost:8080/sigmr/js/devextreme/Lib/css/dx.light.css" type="text/css">
+<link rel="stylesheet" href="http://localhost:8080/sigmr/css/ui.jqgrid.css" />
+<link
+  rel="stylesheet"
+  id="sigmr-theme-style"
+  href="http://localhost:8080/sigmr/css/app/main-sig.css?v=0.0.0-snapshot"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/bootstrap-fileinput/fileinput.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/bootstrap-select.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/js/bootstrap-datetimepicker/daterangepicker.css"
+/>
+<link rel="stylesheet" href="http://localhost:8080/sigmr/css/huebee.css" />
 
- <!-- BOOTSTRAP 4.0 en surcouche css !!! -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/fancytree/skin-bootstrap/ui.fancytree.css"
+/>
 
-	<!-- Ajout Jquery + bootstrap pour simuler une POPIN MODAL -->
-	<script src="http://localhost:8080/sigmr/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-	<script src="http://localhost:8080/sigmr/js/jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/css/jquery-plugins/contextmenu/jquery.contextMenu.min.css"
+/>
 
-	<script src="http://localhost:8080/sigmr/css/bootstrap-3.3.2-dist/js/bootstrap.min.js" type="text/javascript"></script>
-	
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/js/devextreme/Lib/css/dx.common.css"
+  type="text/css"
+/>
+<link
+  rel="stylesheet"
+  href="http://localhost:8080/sigmr/js/devextreme/Lib/css/dx.light.css"
+  type="text/css"
+/>
 
+<!-- BOOTSTRAP 4.0 en surcouche css !!! -->
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+  crossorigin="anonymous"
+/>
+
+<!-- Ajout Jquery + bootstrap pour simuler une POPIN MODAL -->
+<script
+  src="http://localhost:8080/sigmr/js/jquery-3.4.1.min.js"
+  type="text/javascript"
+></script>
+<script
+  src="http://localhost:8080/sigmr/js/jquery-ui-1.12.1/jquery-ui.min.js"
+  type="text/javascript"
+></script>
+
+<script
+  src="http://localhost:8080/sigmr/css/bootstrap-3.3.2-dist/js/bootstrap.min.js"
+  type="text/javascript"
+></script>
 
 <script type="text/javascript">
-	function appelFromReactTdbModule(idElement, typElement, crudMode, callBackOnPopinClosing) {
-		
-		console.warn("appelFromReactTdbModule");
-		if($("#the-popin").length === 0){
-			var popinFooter = "<div class=\"modal-footer\"><button type=\"button\" class=\"btn btn-secondary\" data-dismiss=\"modal\">Fermer</button></div>";
-			var popinDialogHeader = $('<div/>').addClass("modal-header").append('<h1>' + typElement + ' ' + idElement + '</h1>');
-			var popinDialogBody = " <div class=\"modal-body\"><p>Contenu FICHE "+ crudMode +"</p></div>"
-			var popinDialog = $('<div/>').addClass("modal-dialog").append(popinDialogHeader).append(popinDialogBody).append(popinFooter);
-			var popin = $('<div/>').attr('id','the-popin').addClass("modal").append(popinDialog);
-			$("body").append(popin);
+  function appelFromReactTdbModule(
+    idElement,
+    typElement,
+    crudMode,
+    callBackOnPopinClosing
+  ) {
+    console.warn("appelFromReactTdbModule");
+    if ($("#the-popin").length === 0) {
+      var popinFooter =
+        '<div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button></div>';
+      var popinDialogHeader = $("<div/>")
+        .addClass("modal-header")
+        .append("<h1>" + typElement + " " + idElement + "</h1>");
+      var popinDialogBody =
+        ' <div class="modal-body"><p>Contenu FICHE ' + crudMode + "</p></div>";
+      var popinDialog = $("<div/>")
+        .addClass("modal-dialog")
+        .append(popinDialogHeader)
+        .append(popinDialogBody)
+        .append(popinFooter);
+      var popin = $("<div/>")
+        .attr("id", "the-popin")
+        .addClass("modal")
+        .append(popinDialog);
+      $("body").append(popin);
 
-			$(popin).on('hidden.bs.modal', function (e) {
-				
-				$("#the-popin").remove();
+      $(popin).on("hidden.bs.modal", function (e) {
+        $("#the-popin").remove();
 
-				// CALLBACK method
-				if(typeof callBackOnPopinClosing === 'function'){
-					var reloadLst = (crudMode !== 'CONSULT')
-					callBackOnPopinClosing(reloadLst,idElement)
-				}
-					
-			});		
-		}
-		$("#the-popin").modal(true);
-	//	alert("STORYBOOK context APPEL Done : idElement " + idElement + " crudMode="+crudMode);
-
-	}
-
-
+        // CALLBACK method
+        if (typeof callBackOnPopinClosing === "function") {
+          var reloadLst = crudMode !== "CONSULT";
+          callBackOnPopinClosing(reloadLst, idElement);
+        }
+      });
+    }
+    $("#the-popin").modal(true);
+    //	alert("STORYBOOK context APPEL Done : idElement " + idElement + " crudMode="+crudMode);
+  }
 </script>
 
 <style>
-		
-	.full-screen .modal-dialog {
-		z-index: 1600;
-		max-width: none;
-	}
+  .full-screen .modal-dialog {
+    z-index: 1600;
+    max-width: none;
+  }
 
-	#the-popin .modal-dialog{
-		background-color: #fff;
-		z-index: 1600;
-	}
+  #the-popin .modal-dialog {
+    background-color: #fff;
+    z-index: 1600;
+  }
 </style>
 
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-	integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+  crossorigin="anonymous"
+/>
